--- a/serverless.yml
+++ b/serverless.yml
@@ -48,7 +48,17 @@ functions:
           method: get
           cors: true
           authorizer: min2
-
+  list:
+    # Defines an HTTP API endpoint that calls the main function in list.js
+    # - path: url path is /notes
+    # - method: GET request
+    handler: list.main
+    events:
+      - http:
+          path: notes
+          method: get
+          cors: true
+          authorizer: min2
 
 
 iamRoleStatements:
