--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
-language: node_js
-node_js:
-- node
-cache:
-  directories:
-    - node_modules
-script: 
-    - npm install -g serverless
-    - serverless deploy
+# language: node_js
+# node_js:
+# - node
+# cache:
+#   directories:
+#     - node_modules
+# script: 
+#     - npm install -g serverless
+#     - serverless deploy
