--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,13 +8,12 @@ jobs:
     steps:
       - name: 'Checkout'
         uses: actions/checkout@master
-      - name: 'Find directory'
-        run: cd Terraform
       - name: 'Terraform Format'
         uses: hashicorp/terraform-github-actions@master
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'fmt'
+          tf_actions_working_dir: Terraform/
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Init'
@@ -22,7 +21,7 @@ jobs:
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'init'
-          -target: Terraform/
+          tf_actions_working_dir: Terraform/
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Validate'
@@ -30,7 +29,7 @@ jobs:
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'validate'
-          -target: Terraform/
+          tf_actions_working_dir: Terraform/
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform Plan'
@@ -38,7 +37,7 @@ jobs:
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'plan'
-          -target: Terraform/
+          tf_actions_working_dir: Terraform/
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'Terraform apply'
@@ -46,6 +45,6 @@ jobs:
         with:
           tf_actions_version: 0.12.18
           tf_actions_subcommand: 'apply'
-          -target: Terraform/
+          tf_actions_working_dir: Terraform/
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
