--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -50,3 +50,5 @@ jobs:
           tf_actions_working_dir: Terraform/
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
